# mobile_app

./: .dockerignore  .gitignore  COPYRIGHT_NOTICE  README.md  flutter_rust_bridge.yaml  pubspec.yaml  rust-toolchain.toml
.github/workflows/: codeql.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
assets/animations/: lock_animation.json
fdroid/: com.secluso.mobile.yml
integration_test/: simple_test.dart
ios/: .gitignore  Podfile
ios/Runner/: AppDelegate.swift  BytePlayerChannel.swift  BytePlayerPlatformView.swift  BytePlayerViewFactory.swift  ByteQueueManager.swift  ByteQueueResourceLoader.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  keys.dart  main.dart  objectbox-model.json  objectbox.g.dart
lib/database/: app_stores.dart  entities.dart  migration_runner.dart  migrations.dart
lib/notifications/: alert_preferences.dart  android_push_transport.dart  download_status.dart  download_task.dart  epoch.dart  epoch_markers.dart  firebase.dart  heartbeat_task.dart  ios_notification_relay.dart  ios_push_native.dart  notification_permissions.dart  notifications.dart  pending_processor.dart  scheduler.dart  thumbnails.dart  unified_push_service.dart
lib/routes/: activity_page.dart  app_drawer.dart  app_shell.dart  design_lab_page.dart  home_page.dart  server_page.dart  settings_page.dart  system_shell_page.dart  theme_provider.dart
lib/ui/: font_licenses.dart  google_fonts.dart  secluso_luxury.dart  secluso_preview_assets.dart  secluso_qr_reader.dart  secluso_shell_ui.dart  secluso_surfaces.dart  secluso_theme.dart
lib/utilities/: app_coordination_state.dart  app_paths.dart  byte_player_view.dart  byte_stream_player.dart  camera_util.dart  firebase_init.dart  lock.dart  (+16 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: core.rs  lock_manager.rs  logger.rs  logmod.rs  mod.rs
rust_builder/: pubspec.yaml
test/: logger_redaction_test.dart
tool/: design_targets_android.txt  device_farm_design_capture.sh
windows/: CMakeLists.txt
(+114 files in other folders)
