[package]
name = "rust_lib_privastead_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
privastead-app-native = { path = "../../app_native" }
flutter_rust_bridge = "=2.10.0"
bincode = "1.2.1"
rand="0.8"
lazy_static = "1.4"
once_cell = "1.19.0"
parking_lot="0.12.3"
simplelog="0.12.2"
time="0.3.41"
log = { version="0.4.27", features=["kv"] }
fs2 = "0.4.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
