[package]
name = "rust_lib_secluso_flutter"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
bincode = "1.3.3"
rand="0.9"
lazy_static = "1.5"
once_cell = "1.21.4"
parking_lot="0.12.5"
simplelog="0.12.2"
time="0.3.47"
log = { version="0.4.29", features=["kv"] }
fs2 = "0.4.3"
tracing-log = "0.2.0"

[dependencies.secluso-app-native]
git = "https://github.com/secluso/secluso"
rev = "b8c37bf16f761e10d188f12972ef2d328fc27ba8"
package = "secluso-app-native"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
